--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "font-awesome": "^4.7.0"
+    "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
+    "react-bootstrap": "^2.7.4",
+    "react-responsive-carousel": "^3.2.23"
   }
 }
