--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reach/router": "^1.3.4",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "react-bootstrap": "^2.7.4",
