--- a/REACTJS/29-5/bt1/package.json
+++ b/REACTJS/29-5/bt1/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.3",
     "@reach/router": "^1.3.4",
+    "@rematch/core": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
