--- a/REACTJS/29-5/bt1/package.json
+++ b/REACTJS/29-5/bt1/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.1.3",
+    "@ant-design/plots": "^1.2.5",
     "@reach/router": "^1.3.4",
     "@rematch/core": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +16,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.6.2",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
